karnc/tests/fixtures/negative/96_http_extra_param/src/svc.karn
context svc

service api {
  on http GET "/orders" (extra: String) -> Effect[HttpResult[String]] {
    Ok("none")
  }
}
